--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,11 +1,16 @@
 FROM node:18-alpine
 
+# Install OpenSSL for Prisma
+RUN apk add --no-cache openssl libc6-compat
+
 WORKDIR /app
 
 COPY package.json package-lock.json ./
 RUN npm install
 
 COPY . .
+
+RUN npx prisma generate
 
 ENV NODE_ENV=development
 EXPOSE 5173 4000
