--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server:dev": "nodemon --watch server --ext ts --exec \"ts-node --project tsconfig.server.json server/index.ts\"",
+    "server:dev": "nodemon --watch server --ext ts --exec \"tsx server/index.ts\"",
     "dev:docker": "concurrently \"npm run dev -- --host 0.0.0.0 --port 5173\" \"npm run server:dev\"",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "db:seed": "ts-node prisma/seed.ts",
+    "db:seed": "tsx prisma/seed.ts",
     "build:server": "tsc -p tsconfig.server.json",
     "start": "node dist-server/index.js",
     "dev:server": "ts-node --project tsconfig.server.json server/index.ts"
@@ -34,10 +34,11 @@
     "nodemon": "^3.0.2",
     "prisma": "^5.16.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.0"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   }
 }
