feat: implement GitHub webhook for automatic Docker rebuilds

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/quartermaster?schema
 
 # Express server settings
 PORT=4000
+
+# GitHub Webhook Secret (generate with: openssl rand -hex 32)
+# This should match the secret you configure in GitHub webhook settings
+WEBHOOK_SECRET=
