feat: integrate workflow automation with BullMQ and Redis
- Added BullMQ and ioredis as dependencies for job queue management.
- Created a new Redis configuration file for connection settings.
- Implemented automation job queue in automationQueue.ts.
- Developed workflow processing logic in workflowProcessor.ts.
- Added a new route for triggering workflows in workflows.ts.
- Updated opportunities route to enqueue workflow jobs on stage change.
- Refactored stage label utilities into a new file stageUtils.ts.
- Created an automation worker to process queued jobs.
- Removed deprecated stageLabels.ts file.

--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "db:seed": "tsx prisma/seed.ts",
     "build:server": "tsc -p tsconfig.server.json",
     "start": "node dist-server/index.js",
-    "dev:server": "ts-node --project tsconfig.server.json server/index.ts"
+    "dev:server": "ts-node --project tsconfig.server.json server/index.ts",
+    "worker:automation": "tsx server/workers/automationWorker.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.16.1",
+    "bullmq": "^5.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.356.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
