feat: configure Redis service and update automation queue naming conventions

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # PostgreSQL connection string used by Prisma
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/quartermaster?schema=public"
 
+# Redis connection string for BullMQ job queues
+REDIS_URL="redis://localhost:6379"
+
 # Express server settings
 PORT=4000
 
