--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,6 +19,20 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:7-alpine
+    container_name: quartermaster-redis
+    restart: unless-stopped
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   quartermaster-dev:
     build:
       context: .
@@ -28,11 +42,14 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     ports:
       - '5173:5173'
       - '4000:4000'
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/quartermaster?schema=public
+      - REDIS_URL=redis://redis:6379
       - PORT=4000
       - NODE_ENV=development
       - WEBHOOK_SECRET=${WEBHOOK_SECRET:-}
@@ -63,3 +80,4 @@ services:
 
 volumes:
   postgres_data:
+  redis_data:
