feat: enhance navigation and task management features
- Added new tabs for Leads, Quotes, and Contracts in NavigationTabs component.
- Implemented filtering options for tasks based on owner, status, and priority in TasksView component.
- Introduced detailed task view with automation rule information and task details.
- Updated Task type to include optional workflowRuleId.
- Created new API route for AI assistant to summarize opportunities and provide pipeline insights.
- Developed AssistantPanel component for user interaction with the AI assistant.
- Built ContractsView and LeadsView components for managing contracts and leads with search and filter capabilities.
- Implemented QuotesView component for displaying and filtering quotes.

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,5 @@
-# PostgreSQL connection string used by Prisma
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/quartermaster?schema=public"
-
-# Redis connection string for BullMQ job queues
-REDIS_URL="redis://localhost:6379"
-
-# Express server settings
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/quartermaster?schema=public
+REDIS_URL=redis://localhost:6379
 PORT=4000
-
-# GitHub Webhook Secret (generate with: openssl rand -hex 32)
-# This should match the secret you configure in GitHub webhook settings
+NODE_ENV=development
 WEBHOOK_SECRET=
