--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -52,11 +52,14 @@ services:
       - PORT=4000
       - NODE_ENV=development
       - WEBHOOK_SECRET=${WEBHOOK_SECRET:-}
+      - ENABLE_WORKER_EVENTS=true
     volumes:
       - ./server:/app/server
       - ./prisma:/app/prisma
       - ./package.json:/app/package.json
       - ./tsconfig.server.json:/app/tsconfig.server.json
+      - ./.git:/app/.git:ro
+      - ./docker-compose.dev.yml:/app/docker-compose.dev.yml:ro
       - /app/node_modules
       # Mount Docker socket for Windows Docker Desktop
       - //var/run/docker.sock:/var/run/docker.sock
@@ -73,7 +76,6 @@ services:
       - '5173:5173'
     environment:
       - NODE_ENV=development
-      - VITE_API_URL=http://backend:4000
     volumes:
       - ./src:/app/src
       - ./index.html:/app/index.html
